# Knowledge

./: CMakeLists.txt  vimConfig  vimr  ycm_extra_conf.txt  智能指针学习心得.md
Base/: AcceptIO.cpp  AcceptIO.h  AsyncMsgObject.h  AsyncObject.cpp  AsyncObject.h  Buffer.cpp  Buffer.h  BufferMgr.cpp  BufferMgr.h  CMakeLists.txt  Connection.cpp  Connection.h  GFunc.cpp  GFunc.h  IOMgr.cpp  IOMgr.h  Log.h  MsgDefine.h  Net.cpp  Net.h  NetClient.cpp  NetClient.h  NetIO.cpp  NetIO.h  NetIOMgr.cpp  NetIOMgr.h  NetObjService.cpp  NetObjService.h  NetService.cpp  NetService.h  ObjService.cpp  ObjService.h  ObjectService.cpp  ObjectService.h  Protocol.h  SThreadPool.cpp  SThreadPool.h  Service.cpp  Service.h  ServiceTpl.h  (+12 more)
Base/Base/: ActiveObject.cpp  ActiveObject.h  AsyncMsgObject.h  AsyncObject.cpp  AsyncObject.h  MsgDefine.h
Base/Test/: client.cpp
Base/Thread/: AutoLock.h  ObjectLock.h  Test.cpp  Thread.cpp  Thread.h  ThreadPool.h
Base/ThreadPool/: ActiveObject.cpp  ActiveObject.h  ObjectLock.h  ObjectService.cpp  ObjectService.h  TaskDefine.cpp  TaskDefine.h  Thread.cpp  Thread.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h
Base/ThreadPool/bak/: Thread.cpp.bak  Thread.h.bak
Base/bak/: Package.sh  Service.h  build.sh
Base/bakCode/: NetIOMgr.cpp
Linux/IniParse/: CMakeLists.txt  IniParser.cpp  IniParser.h  README  Svr.conf  main.cpp
Linux/Net/: AutoLock.h  Buffer.cpp  Buffer.h  BufferMgr.cpp  BufferMgr.h  BufferSharedMgr.cpp  BufferSharedMgr.h  CMakeLists.txt  CiccAtomLock.cpp  CiccAtomLock.h  ConCurrentQueue.h  ConcurrentQueueNew.h  NetClient.cpp  NetClient.h  NetService.cpp  NetService.h  Protocol.h  Singleton.h  Socket.cpp  Socket.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  UserObject.cpp  UserObject.h  epoll.cpp  epoll.h  lock.h  main.cpp  nocopyabale.h  tags  tagscreate.sh
Linux/Work/AgentService/: CMakeLists.txt  build.sh
Linux/Work/AgentService/Test/: Buffer.h  main.cpp  zmqPub.cpp  zmqPub.h
Linux/Work/AgentService/conf/: AgentService.xml  ReadFileInfo.xml  build.sh  make.sh  service.sh
Linux/Work/AgentService/mmap/: mmap.cpp
Linux/mail/: AlarmService.xml  CMakeLists.txt  CMakeLists.txt.bak  Notify.cpp  Notify.h  NotifyMgr.h  PBMessageDefine.h  Package.sh  Readme  Socket.cpp  Socket.h  build.sh  generate.sh  mail.cpp  mail.h
Linux/mail/Damon/: CMakeLists.txt  main.cpp  smtp.cpp  smtp.h
Linux/mail/Service/: AlarmService  AlarmService.xml  contactor.bak  contactor.xml
Linux/mail/conf/: AlarmService.xml  service.sh
Linux/mail/include/Server/: Def.h  (+22 more)
Linux/mail/proto/: PBMessageDefine.h  PbMessageEnum.proto  Test.sh  generate.sh
Linux/mail/src/: Alarm.json  AlarmService.cpp  AlarmService.h  AlarmServiceMain.cpp  AlarmServiceTest.cpp  AppUser.cpp  AppUser.h  Connection.cpp  Connection.h  Contactor.cpp  Contactor.h  Log.h  Notify.cpp  Notify.h  NotifyMgr.cpp  NotifyMgr.h  Service.cpp  Service.h  ServiceMain.cpp  Socket.cpp  Socket.h  contactor.json  contactor.xml  mail.cpp  mail.h  main.cpp  tags
Python/mix/: CMakeLists.txt  CMakeLists.txt.bak  Test.cpp.bak  Xtest.py  main.cpp  main.cpp.bak
SDK/Other/Sqlite3/: CMakeLists.txt  Readme
SDK/Server/: AcceptIO.cpp  AcceptIO.h  ActiveObject.cpp  ActiveObject.h  Buffer.cpp  BufferMgr.cpp  BufferMgr.h  CMakeLists.txt  Connection.cpp  Connection.h  GFunc.cpp  GFunc.h  GlobalVar.h  Log.h  LogFile.cpp  LogFile.h  MemoryReclaimMgr.h  NetClient.cpp  NetClient.h  NetObjService.cpp  NetObjService.h  NetService.cpp  NetService.h  ObjService.cpp  ObjService.h  ObjectLock.h  ObjectService.cpp  ObjectService.h  Protocol.h  Service.cpp  Service.h  Socket.cpp  Socket.h  TaskDefine.cpp  TaskDefine.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h  UserObject.cpp  UserObject.h
SDK/Server/bak/: AcceptIO.cpp  NetClient.cpp  NetService.cpp  NetService.h  Socket.cpp  UserObject.cpp
SDK/Server/include/: ActiveObject.h  AsyncMsgFunc.h  Available.h  Connection.h  GenericFactory.h  LogFile.h  NetIO.h  NetService.h  ObjectLock.h  Protocol.h  TaskDefine.h  ThreadPoolExecutor.h  marc.h
SDK/Server/srcbak/: BufferMgr.cpp  GFunc.cpp  GlobalVar.cpp  MemoryReclaimMgr.h  ObjService.cpp  ObjectService.cpp  Protocol.h  PtrCycle.h  marc.bak  version.h
SDK/Test/: CMakeLists.txt
SDK/Test/Swap/: Test.cpp  buffer.cpp  buffer.h
SDK/Test/Test/: Test.cpp  Test.h  main.cpp
SDK/Test/src/: ActiveObject.cpp  ActiveObject.h  AsyncObject.cpp  AsyncObject.h  BufferMgr.cpp  EventDef.h  Lock.h  ObjectService.cpp  ObjectService.h
SDK/TestNetService/: CMakeLists.txt
SDK/TestNetService/src/: TestNetService.cpp  TestNetService.h  TestServiceMain.cpp
SDK/TestService/: CMakeLists.txt  build.sh
SDK/TestService/src/: CMakeLists.txt  TestMainService.cpp  TestService.cpp  TestService.h  Version
SDK/v1.0/Base/: BaseVersion.h.in  CMakeLists.txt  build.sh  versionBase.h.in
SDK/v1.0/Server/: CMakeLists.txt  build.sh  versionObject.h.in  versionService.h.in
Server/TestCurl/: CMakeLists.txt
Server/TestCurl/conf/: make.sh
Server/TestCurl/src/: HttpTool.cpp  HttpTool.h  main.cpp
Server/TestService/: CMakeLists.txt
Server/TestService/src/: TestService.cpp  TestService.h  TestServiceMain.cpp  Version
Test/Curl/: CMakeLists.txt  build.sh
Test/Curl/conf/: auto_bak_log.sh  make.sh  service.sh
Test/Curl/src/: CppUrl.cpp  CppUrl.h  main.cpp
Test/ProtoCMake/: CMakeLists.txt
Test/ProtoCMake/PB/: CMakeLists.txt  person.proto
Test/ProtoCMake/src/: main.cpp
Test/cmakeDR/: CMakeLists.txt  build.sh  main.cpp
Test/cppcheck/: CMakeLists.txt  main.cpp
Test/cppcheck/cmake/: CppcheckTargets.cmake  CxxTest.cmake  FindCxxTest.cmake  RpcGeneratedFiles.cmake  gen_build_info.sh
Test/mysql/: CMakeLists.txt  build.sh
Test/mysql/conf/: make.sh
Test/mysql/src/: main.cpp
Test/version/: CMakeLists.txt  Test.cpp  helloConfig.h.in
format/jsoncpp/: CMakeLists.txt  Readme
format/jsoncpp/src/: Test.cpp
proto/: CMakeLists.txt  CMakeLists_tmp.txt  README  Test.pb.cc  Test.pb.h  Test.proto  create.sh  main.cpp
zmq/AyncSvr/: CMakeLists.txt  ayncSrv.cpp
zmq/PubSub/: CMakeCache.txt  CMakeLists.txt  client.cpp  czmqClient.cpp  main.cpp  srv.cpp
(+327 files in other folders)
