cmake_minimum_required(VERSION 3.10)
project(c_to_python)
set(CXX_MAKE_TYPE "Debug")
set(CXX_MAKE_FLAGS  "${CXX_MAKE_DEBUG_FLAGS} -Wall -plthread -g -ggdb")
find_package(PythonLibs REQUIRED)
include_directories("/usr/include/python2.7")
#target_link_libraries("/usr/lib/python2.7/config-x86_64-linux-gnu/")
#include_directories(${PYTHON_INCLUDE_DIRS})
message("ctopython")
message(${PYTHON_INCLUDE_DIRS})
add_executable(c_to_python main.cpp)
#target_link_libraries(c_to_python "/usr/lib/python2.7/site-packages/")
#target_link_libraries(c_to_python "/usr/lib/x86_64-linux-gnu/libpython3.6.5.so")
target_link_libraries(c_to_python ${PYTHON_LIBRARIES})
message(${PYTHON_LIBRARIES})
